# challenge-final

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: asset_details.csv
docs/: architecture.md  dataset_extraction.md  execution_guide.md  mlops.md  model_construction.md
scripts/: 01_extract_data.py  02_build_dataset.py  03_train_models.py  04_optimize_portfolio.py  05_run_full_pipeline.py
src/config/: settings.py
src/data/: build_dataset.py  extract_data.py  validate_data.py
src/features/: feature_engineering.py
src/mlops/: mlflow_tracking.py
src/models/: evaluate_models.py  predict_expected_returns.py  train_classification_models.py  train_regression_model.py
src/portfolio/: optimize_portfolio.py
src/utils/: exceptions.py  logger.py
