[project]
name = "challenge-final"
version = "0.1.0"
description = "Monthly Investment Recommendation using ML and Modern Portfolio Theory"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
